[package]
name = "dflow-amm-interface"
version = "0.0.1"
license = "Apache-2.0"
edition = "2021"
description = "LOCAL COPY WITH EXTENDED SWAP of AMM interface to integrate into dflow-core"
keywords = ["solana", "dflow", "aggregator"]
# Fork of dflow-amm-interface (Apache-2.0)

[dependencies]
solana-sdk = { version = "3.0.0" }
serde_json = "1.0.148"
serde = "1.0.219"
anyhow = "1.0"
ahash = "0.8"
