[package]
name = "dflow-deriverse"
version = "0.1.0"
edition = "2024"

[dependencies]
dflow-amm-interface = { path = "../dflow-amm-interface" }
anyhow = "1.0.100"
bytemuck = { version = "1.23.0" }
solana-sdk = { version = "3.0.0" }
rust_decimal = "1.39.0"
drv-models = { git = "ssh://git@github.com/deriverse/drv-smart-contract-common.git", tag = "v0.2.47" }
spl-token-interface = { version = "2.0.0" }
spl-token-2022-interface = { version = "2.1.0" }
solana-address-lookup-table-interface = { version = "3.0.0", features = [
    "bincode",
] }
solana-system-interface = { version = "3.0.0", features = ["bincode"] }
spl-associated-token-account = { version = "8.0.0", features = [
    "no-entrypoint",
] }
serde_json = "1.0.148"
serde = "1.0.219"

[dev-dependencies]
solana-rpc-client = "3.1.12"
solana-rpc-client-api = "3.1.12"
solana-system-interface = "3.0.0"
ahash = "0.8.12"
once_cell = "1.21.3"

[features]
default = ["rpc-test"]
rpc-test = []
mainnet-test = []
